crates/deadline-cli/tests/cli/snapshots/cli__root__known_error_prints_message_to_stdout_and_exits_one.snap
---
source: crates/deadline-cli/tests/cli/root.rs
info:
  program: deadline
  args:
    - config
    - get
    - nonexistent.setting
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: ""
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_CLOUDWATCHLOGS: "http://localhost:61826"
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:61826"
    AWS_ENDPOINT_URL_STS: "http://localhost:61826"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpTXFJzh/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpTXFJzh
---
success: false
exit_code: 1
----- stdout -----
AWS Deadline Cloud configuration has no setting named 'nonexistent.setting'.

----- stderr -----
